<resources>
    <string name="app_name">电话簿</string>
    <string name="preview_text_a">A</string>
    <string name="preview_text_feifei">飞飞</string>
    <string name="arrow_goto">前往</string>
    <string name="create_contactor">新建联系人</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="edit_contactor">编辑联系人</string>
    <string name="search">搜索</string>
    <string name="avatar">头像</string>
    <string name="name">姓名</string>
    <string name="phone">电话</string>
    <string name="email">电子邮件</string>
    <string name="address">地址</string>
    <string name="address_home">家庭住址</string>
    <string name="address_work">工作单位</string>
    <string name="scheme" translatable="false">tty</string>
    <string name="path" translatable="false">/contactor/add</string>
    <string name="host" translatable="false">nfcv.xyz</string>
    <string name="phone_example" translatable="false">17712345678</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="like">收藏</string>
    <string name="example_phone_place" translatable="false">浙江杭州 电信</string>
    <string name="email_example">wcf@zjut.edu.cn</string>
    <string name="address_example">杭州市留下街道留和路288号浙江工业大学屏峰校区</string>
    <string name="add_to_contactor_list">添加到通讯录</string>
    <string name="sync">同步</string>
    <string name="logout">退出登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="create_account">注册账户</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="register">注册</string>
    <string name="login_with_account">使用云同步账户登录</string>
    <string name="login_account">登录账户</string>
    <string name="no_login">未登录</string>
    <string name="qrcode">二维码</string>
    <string name="please_attach_nfc_tag">请贴近联系人卡片</string>

</resources>