<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <xyz.nfcv.widget.RoundImageView
                    android:id="@+id/detail_people_avatar"
                    android:layout_width="@dimen/avatar_size_large"
                    android:layout_height="@dimen/avatar_size_large"
                    android:layout_margin="@dimen/default_margin"
                    app:radius="@dimen/avatar_round_large" />

                <TextView
                    android:id="@+id/detail_people_name"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/default_margin"
                    android:layout_toEndOf="@id/detail_people_avatar"
                    android:gravity="center_vertical"
                    android:text="@string/preview_text_feifei"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/detail_phone_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin">

                <xyz.nfcv.widget.RoundImageView
                    android:id="@+id/detail_phone_call"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/default_margin"
                    android:background="@color/green_600"
                    android:padding="8dp"
                    android:src="@drawable/ic_call"
                    app:radius="18dp" />

                <TextView
                    android:id="@+id/detail_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/detail_phone_call"
                    android:maxLines="1"
                    android:text="@string/phone_example"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/detail_email_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin">

                <TextView
                    android:id="@+id/detail_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/detail_email_send"
                    android:maxLines="1"
                    android:text="@string/email_example"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <xyz.nfcv.widget.RoundImageView
                    android:id="@+id/detail_email_send"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="@dimen/default_margin"
                    android:background="@color/orange_600"
                    android:padding="8dp"
                    android:src="@drawable/ic_email"
                    app:radius="18dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/detail_home_address_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin">

                <TextView
                    android:id="@+id/detail_home_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_toEndOf="@id/detail_home_address_navigate"
                    android:ellipsize="middle"
                    android:maxLines="1"
                    android:text="@string/address_example"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <xyz.nfcv.widget.RoundImageView
                    android:id="@+id/detail_home_address_navigate"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/default_margin"
                    android:background="@color/dark_blue_400"
                    android:padding="8dp"
                    android:src="@drawable/ic_home"
                    app:radius="18dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/detail_work_address_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin">


                <xyz.nfcv.widget.RoundImageView
                    android:id="@+id/detail_work_address_navigate"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/default_margin"
                    android:background="@color/red_600"
                    android:padding="8dp"
                    android:src="@drawable/ic_place"
                    app:radius="18dp" />

                <TextView
                    android:id="@+id/detail_work_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_toEndOf="@id/detail_work_address_navigate"
                    android:ellipsize="middle"
                    android:maxLines="1"
                    android:text="@string/address_example"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </RelativeLayout>

            <Button
                android:id="@+id/detail_add_to_contactor_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_margin"
                android:text="@string/add_to_contactor_list" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>